package/gargoyle/files/www/themes/Gargoyle/theme.css
li.list-group-item span:last-child 
{
	float: right;
}
.list-group-item 
{
	overflow-x: auto;
}
.list-group
{
	padding-left:0;
}
html 
{
	overflow-x: hidden;
}
html, body, .full-height 
{
	height: 100%;
}
body
{
	background: #939598;
	font-size:11px;;
}
#content 
{
	background: #8B9AF3;
	background: -webkit-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* For Safari 5.1 to 6.0 */
	background: -o-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Opera 11.1 to 12.0 */
	background: -moz-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Firefox 3.6 to 15 */
	background: repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Standard syntax */
	overflow-y: scroll;
}
#content .row > div 
{
	margin-bottom: 15px;
}
fieldset
{
	margin: 10px;
	padding: 10px;
}
legend 
{
	font-weight: bold;
	color: #888AB8;
	width: auto;
	border-bottom: 0;
	margin-bottom: 0;
}
.green
{
	background: #23ae89 !important;
}
.blue 
{
	background: #2361ae !important;
}
.orange 
{
	background: #d3a938 !important;
}
.red 
{
	background: #ae2323 !important;
}
@media screen and (max-width: 991px) 
{
	.row-offcanvas 
	
{
		position: relative;
		left: 0;
		-webkit-transition: left 0.25s ease-in-out;
		-moz-transition: left 0.25s ease-in-out;
		-o-transition: left 0.25s ease-in-out;
		transition: left 0.25s ease-in-out;
	}
	.row-offcanvas.active
	
{
		left: 30%;
	}
}
@media screen and (max-width: 767px) 
{
	.row-offcanvas
	
{
		position: relative;
		left: 0;
		-webkit-transition: left 0.25s ease-in-out;
		-moz-transition: left 0.25s ease-in-out;
		-o-transition: left 0.25s ease-in-out;
		transition: left 0.25s ease-in-out;
	}
	.row-offcanvas.active
	
{
		left: 55%;
	}
}
#sidebar
{
	z-index: 4;
	height: 100%;
	padding-left: 0;
	padding-right: 0;
	background: #8B9AF3;
	background: -webkit-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* For Safari 5.1 to 6.0 */
	background: -o-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Opera 11.1 to 12.0 */
	background: -moz-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Firefox 3.6 to 15 */
	background: repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Standard syntax */
}
.sidebar-item.active>a 
{
	background-color: #FFFFFF;
	color: #000000;
	line-height: 40px;
	display: block;
	float: left;
	text-decoration: underline;
	width: 100%;
}
.sidebar-item>a:hover, .sidebar-item.active>a:hover 
{
	padding-left: 7.3%;
}
li.sidebar-header 
{
	text-align: center;
	background: #8B9AF3;
	background: -webkit-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: -o-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: -moz-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: linear-gradient(90deg, #C8D0FE, #FFFFFF);
	border-bottom: 10px solid #C8D0FE;
}
.sidebar-footer
{
	display: none;
}
h1.page-header
{
	color: #8B9AF3;
	text-indent: 10px;
}
.page-header
{
	background: #FFFFFF;
	border-radius: 5px;
	margin-top: 20px;
	padding: 10px 0 10px;
}
li.sidebar-header span 
{
	font-size: 20px;
}
li.sidebar-header span#garg_host 
{
	font-size:11px;
}
li.sidebar-item 
{
	line-height: 40px;
}
li.sidebar-item a 
{

	border-bottom: 1px solid #b2b2b2;
}
li.sidebar-item>a:hover 
{
	padding-left: 13%;
	text-decoration: underline;
}
.sidebar-item.active .sidebar-item.active 
{
	background: #ffffff;
	color: #000000;
	font-size: 14px;
	line-height: 20px;
	display: block;
	float: left;
	text-decoration: none;
	width: 100%;
	font-weight: bold;
	text-indent: 0;
	padding-left: 13%;
}
.sidebar-item.active .sidebar-item.active:before 
{
	content: "> ";
}
.sidebar-item.active .sidebar-item a
{
	padding-left: 13%;
	text-indent: 0;
	border: none;
}
ul.sidebar .sidebar-header a, ul.sidebar .sidebar-list a:hover 
{
	background: #ffffff;
}
ul.sidebar .sidebar-title 
{
	color: #627cb7;
}
ul.sidebar .sidebar-list a:hover 
{
	color: #757575;
}
ul.sidebar .sidebar-list a 
{
	background: #ffffff;
	font-weight: normal;
}
.sidebar-footer div a 
{
	color: rgba(255, 255, 255, 0.56);
}
.sidebar-footer div a:hover 
{
	color: #ffffff;
}
ul.sidebar 
{
	position: absolute;
	top: 0;
	bottom: 0;
	padding: 0;
	margin: 0;
	list-style: none;
	overflow-x: hidden;
	overflow-y: auto;
	width: 100%;
	background: #8B9AF3;
	background: -webkit-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: -o-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: -moz-linear-gradient(90deg, #C8D0FE, #FFFFFF);
	background: linear-gradient(90deg, #C8D0FE, #FFFFFF);
	border: 10px solid #8B9AF3;
	border-radius: 10px;
	border-style: inset;
}
ul.sidebar li a 
{
	color: #121660;
	display: block;
	float: left;
	text-decoration: none;
	width: 100%;
	font-size: 20px;
	font-weight: bold;
	padding: initial;
	padding-left: 7.3%;
}
ul.sidebar .sidebar-header a 
{
	font-size: 18px;
	line-height: 60px;
	text-align: center;
}
ul.sidebar .sidebar-header .menu-icon 
{
	float: right;
	font-size: 18px;
	padding-right: 28px;
	line-height: 60px;
}
ul.sidebar .sidebar-title 
{
	font-size: 12px;
	text-indent: 6.6%;
	height: 35px;
	line-height: 40px;
	text-transform: uppercase;
}
ul.sidebar .sidebar-list
{
	height: 20px;
	list-style-type: none;
	padding: 0;
}
ul.sidebar .sidebar-list a 
{
	text-indent: 8.3%;
	font-size: 14px;
	line-height: 20px;
}
ul.sidebar .sidebar-list a:hover 
{
	padding-left: 18%;
	text-decoration: underline;
}
ul.sidebar .sidebar-list .menu-icon 
{
	float: right;
	padding-right: 29px;
	line-height: 40px;
	width: 70px;
}
ul.sidebar .sidebar-list a:hover .menu-icon 
{
	text-indent: 8.3%;
}
ul ul 
{
	display: none;
}
ul li.active>ul 
{
	display: inline;
}
ul ul>a 
{
	display: inline;
	padding: 0;
	color: #000;
	cursor: default;
}
ul ul>li:hover 
{
	color: #000;
	cursor: default;
}
ul ul>a:visited 
{
	color: #000;
	cursor: default;
}
ul ul>a:active 
{
	color: #000;
	cursor: default;
}
nav>li.active>a 
{
	background-color: #eee;
}
.sidebar-footer 
{
	position: absolute;
	bottom: 0;
	width: 100%;
	padding: 0;
	margin: 0;
	text-align: center;
}
.sidebar-footer div a 
{
	font-size: 12px;
	line-height: 43px;
}
.sidebar-footer div a:hover 
{
	text-decoration: none;
}
@media screen and (max-width: 991px) 
{
	#sidebar 
{
	  left: -30%;
	  width: 30%;
	  position: absolute;
	  top: 0;
	  padding: 0px;
	}
}
@media screen and (max-width: 767px) 
{
	#sidebar 
{
	  left: -55%;
	  width: 55%;
	  position: absolute;
	  top: 0;
	  padding: 0px;
	}
}
#topnavbar 
{
	z-index: 3;
	margin-right: -15px;
	margin-left: -15px;
	border-radius: 0px;
	margin-bottom: 0;
}
.sidebar-toggle 
{
	float: left;
	margin-left: 10px;
	margin-right: 10px;
}
.navbar-brand
{
	padding-top: 20px;
	display: none;
}
@media screen and (max-width: 991px) 
{
	.navbar-brand
	
{
		position: absolute;
		width: 100%;
		left: 0;
		top: 0;
		text-align: center;
	}
	.navbar-toggle
	
{
		z-index: 1;
	}
}
@media screen and (min-width: 992px)
{
	.navbar-right 
	
{
		margin-right: -30px;
	}
	div#topnavbar
	
{
		display: none;
	}
	.page-header
	
{
		margin-top: 10px;
	}
}
#row-offcanvas > .container-fluid
{
	  padding-left: 0;
	  padding-right: 0;
}
.btn:not(.btn-default), #bottom_button_container > .btn 
{
	background: #8B9AF3;
	background: -webkit-linear-gradient(#C8D0FE, #FFFFFF);
	background: -o-linear-gradient(#C8D0FE, #FFFFFF);
	background: -moz-linear-gradient(#C8D0FE, #FFFFFF);
	background: linear-gradient(#C8D0FE, #FFFFFF);
	border: 1px solid #121660;
	color: #121660;
	font-weight: bold;
}
.btn:hover:not(.btn-default), #bottom_button_container > .btn:hover 
{
	background: #8B9AF3;
	background: -webkit-linear-gradient(#FFFFFF, #C8D0FE);
	background: -o-linear-gradient(#FFFFFF, #C8D0FE);
	background: -moz-linear-gradient(#FFFFFF, #C8D0FE);
	background: linear-gradient(#FFFFFF, #C8D0FE);
	border: 1px solid #121660;
	color: #121660;
	font-weight: bold;
}
#bottom_button_container
{
	text-align: center;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-left: 0px;
}
#login_status.alert 
{
	background: #F2F2F2;
	border-radius: 5px;
}
label
{
	font-weight:normal;
}
input
{
	font-size:11px;
	padding:2px;
	display:inline;
}
select
{
	font-size:11px;
	padding:2px;
	width:auto;
	display:inline;
}
button
{
	display:inline;
}
.form-group
{
	margin-bottom:8px;
}
.form-control
{
	padding:2px;
	font-size:11px;;
	width:auto;
	display:inline;
}
.btn
{
	padding:2px;
	font-size:11px;
	display:inline;
}
.short-left-pad
{
	padding-left:2px;
}
.second_row_right_column
{
	margin-top:4px;
	margin-bottom:8px;
}
.indent
{
	margin-left:15px;
	display:block;
}
.form-group-sm select.form-control
{
	height: 25px;
	line-height: 25px;
}
.form-group-lg select.form-control
{
	height: 25px;
	line-height: 25px;
}
select.form-control 
{
	height: 25px;
	line-height: 25px;
	max-width: 100%;
}
.form-group-sm input.form-control 
{
	height: 25px;
	line-height: 25px;
}
.form-group-lg input.form-control 
{
	height: 25px;
	line-height: 25px;
}
input.form-control 
{
	height: 25px;
	line-height: 25px;
	max-width: 100%;
}
.btn-lg
{
	padding:6px 12px;
}
.navbar-toggle
{
	padding:9px 10px;
}
body
{
	background: #8B9AF3;
}
.table-striped>tbody>tr:nth-of-type(even)
{
	background-color: #f9f9f9;
}
.table-striped>tbody>tr:nth-of-type(odd)
{
	background-color: #dadaff;
}
.bandwidth_title_text
{
	color: inherit;
}

